Changed headline to contraction

--- a/data/content.yml
+++ b/data/content.yml
@@ -1,7 +1,7 @@
 ###################### HEADER ##########################
 header:
   subhead: coming soon
-  headline: Android and iOS sitting in a tree
+  headline: Android and iOS sittin' in a tree
   description: Screencast courses to teach you how to create native mobile apps using the Android SDK and iOS's Cocoa Touch framework.
   text: Also learn API development and the architecture and design you will need to make your apps easily portable back and forth
 ###################### FEATURES ##########################
