Change weird social links text

--- a/data/content.yml
+++ b/data/content.yml
@@ -43,7 +43,7 @@ footer:
     description: Aaron lives in the suburbs of Vienna, Austria but is a native of the suburbs of Seattle. In his former life he was a shepherd, a cheesemaker and a sous chef. Now he is freelancing, building native iOS and Android apps and their respective API's. In his spare time, he organizes a range of user groups in Vienna.
 
   social:
-    title: Social Links
+    title: Find Me
     sites:
       - link: http://github.com/pferdefleisch
         icon: github
